# WCSim

./: .gitignore  CMakeLists.txt  readme.md  test.ppm
assets/: 100res1.csv  100res5.csv  10res1.csv  10res10.csv  10res5.csv  10res75.csv  200res1.csv  20res1.csv  20res100.csv  benchmark.txt
assets/records/: direct_path.csv  multiple-edges.csv  reflection.csv  single-edge.csv
src/: camera.cpp  camera.hpp  communicator.cpp  communicator.hpp  console_controller.cpp  console_controller.hpp  cube.cpp  cube.hpp  engine.cpp  engine.hpp  kdtree.cpp  kdtree.hpp  line.cpp  line.hpp  main.cpp  object.cpp  object.hpp  pattern.hpp  polygon_mesh.cpp  polygon_mesh.hpp  printer.cpp  printer.hpp  radiation_pattern.cpp  radiation_pattern.hpp  ray.cpp  ray.hpp  ray_tracer.cpp  ray_tracer.hpp  receiver.cpp  receiver.hpp  record.cpp  record.hpp  recorder.cpp  recorder.hpp  server.cpp  server.hpp  shader.cpp  shader.hpp  someheader.hpp  transform.hpp  (+8 more)
src/shaders/: default.frag  default.vert  ray.frag  ray.vert
vs/: CMakeCache.txt
